crates/bevy_reflect_compile_fail_tests/tests/reflect_remote/invalid_definition.fail.stderr
error[E0308]: mismatched types
  --> tests/reflect_remote/invalid_definition.fail.rs:10:5
   |
10 |     #[reflect_remote(external_crate::TheirStruct)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `bool`, found `u32`
...
13 |         pub value: bool,
   |                    ---- expected due to this
   |
   = note: this error originates in the attribute macro `reflect_remote` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/reflect_remote/invalid_definition.fail.rs:24:5
   |
24 |     #[reflect_remote(external_crate::TheirStruct)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `bool`, found `u32`
...
27 |         pub bool,
   |             ---- expected due to this
   |
   = note: this error originates in the attribute macro `reflect_remote` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0559]: variant `enums::external_crate::TheirStruct::Unit` has no field named `0`
  --> tests/reflect_remote/invalid_definition.fail.rs:42:5
   |
42 |     #[reflect_remote(external_crate::TheirStruct, FromReflect)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `enums::external_crate::TheirStruct::Unit` does not have this field
   |
   = note: this error originates in the attribute macro `reflect_remote` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: `?` operator has incompatible types
  --> tests/reflect_remote/invalid_definition.fail.rs:42:5
   |
42 |     #[reflect_remote(external_crate::TheirStruct, FromReflect)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `u32`, found `bool`
   |
   = note: `?` operator cannot convert from `bool` to `u32`
   = note: this error originates in the attribute macro `reflect_remote` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: `?` operator has incompatible types
  --> tests/reflect_remote/invalid_definition.fail.rs:42:5
   |
42 |     #[reflect_remote(external_crate::TheirStruct, FromReflect)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `String`
   |
   = note: `?` operator cannot convert from `std::string::String` to `usize`
   = note: this error originates in the attribute macro `reflect_remote` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0026]: variant `enums::external_crate::TheirStruct::Unit` does not have a field named `0`
  --> tests/reflect_remote/invalid_definition.fail.rs:42:5
   |
42 |     #[reflect_remote(external_crate::TheirStruct, FromReflect)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ variant `enums::external_crate::TheirStruct::Unit` does not have this field
   |
   = note: this error originates in the attribute macro `reflect_remote` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/reflect_remote/invalid_definition.fail.rs:42:5
   |
42 |     #[reflect_remote(external_crate::TheirStruct, FromReflect)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `u32`, found `bool`
   |
   = note: this error originates in the attribute macro `reflect_remote` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/reflect_remote/invalid_definition.fail.rs:42:5
   |
42 |     #[reflect_remote(external_crate::TheirStruct, FromReflect)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `String`
   |
   = note: this error originates in the attribute macro `reflect_remote` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/reflect_remote/invalid_definition.fail.rs:42:5
   |
42 |     #[reflect_remote(external_crate::TheirStruct, FromReflect)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `bool`, found `u32`
...
47 |         Tuple(bool),
   |               ---- expected due to this
   |
   = note: this error originates in the attribute macro `reflect_remote` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/reflect_remote/invalid_definition.fail.rs:42:5
   |
42 |     #[reflect_remote(external_crate::TheirStruct, FromReflect)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^- help: try using a conversion method: `.to_string()`
   |     |
   |     expected `String`, found `usize`
...
49 |         Struct { value: String },
   |                         ------ expected due to this
   |
   = note: this error originates in the attribute macro `reflect_remote` (in Nightly builds, run with -Z macro-backtrace for more info)
